# bosrender

./: Cargo.toml  README.md  a_spot.frag  animate.sh  demo.ps1  demo.sh  video.ps1
src/: engine.rs  frame_counter.rs  lib.rs  main.rs  offscreen.rs  settings.rs  tiles.rs  trainer.rs  visualizer.rs
src/shaders/: builtin.vert  builtin.vert.spv  compile.sh
