[package]
name = "bosrender"
version = "0.1.0"
edition = "2018"

[features]
default = ["shaderc"]

[dependencies]
structopt = { version = "0.3", default-features = false }
anyhow = "1"
bytemuck = "1.5"
watertender = { git = "https://github.com/Masterchef365/watertender.git", branch = "main" }
erupt = "0.18"
shaderc = { version = "0.7", optional = true }
png = "0.17.1"
